Update Sidebar Navigation code
Update sidebar navigation code

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -131,8 +131,9 @@
   composes: list;
   flex: 1;
 }
+
 .flip {
-  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
   transform: scaleX(-1);
 }
 
